--- a/Portfolio_spes/src/main/webapp/resources/css/customerService/customerService.css
+++ b/Portfolio_spes/src/main/webapp/resources/css/customerService/customerService.css
@@ -36,6 +36,18 @@
 }
 
 .table{
+	width:100%;
 	background-color:white;
 	border-radius:5px;
+	font-size:90%;
+}
+
+.write{
+	width:20%;
+    height:40px;
+	background-color:#ef0056;
+	color:white;
+	border: 1px solid lightgray;
+	border-radius:5px;
+	box-shadow:none;
 }
