--- a/Portfolio_spes/src/main/webapp/resources/css/customerService/questionsWrite.css
+++ b/Portfolio_spes/src/main/webapp/resources/css/customerService/questionsWrite.css
@@ -40,16 +40,17 @@
 	background-color:white;
 	border-radius:5px;
 	font-size:90%;
+	text-align:left;
 }
 
-#qcategorylistcss{
-	float:left;
-	width:54%;
+
+.qcontent{
+	text-align:left;
 	font-size:90%;
 }
 
 .write{
-	width:50%;
+	width:10%;
     height:40px;
 	background-color:#ef0056;
 	color:white;
