--- a/Portfolio_spes/src/main/webapp/resources/css/customerService/questionsWrite2.css
+++ b/Portfolio_spes/src/main/webapp/resources/css/customerService/questionsWrite2.css
@@ -6,27 +6,6 @@
 	text-align:center;
 };
 
-.tt{
-	color:#ef0056;
-	font-size:150%;
-}
-
-.tb{
-	color:gray;
-	font-size:80%;
-}
-
-#minimenu{
-	width:54%;
-	text-align:left;
-}
-
-.minimenu{
-	background-color:#ef0056;
-	border-radius:5px;
-	font-size:90%;
-}
-
 /* 테이블 시작 */
 
 #boardtable{
@@ -42,14 +21,17 @@
 	font-size:90%;
 }
 
-#qcategorylistcss{
-	float:left;
+table{
+	width:50%;
+}
+
+#qcategorycss{
 	width:54%;
 	font-size:90%;
 }
 
 .write{
-	width:50%;
+	width:20%;
     height:40px;
 	background-color:#ef0056;
 	color:white;
