--- a/Portfolio_spes/src/main/webapp/resources/css/customerService/questionsModify.css
+++ b/Portfolio_spes/src/main/webapp/resources/css/customerService/questionsModify.css
@@ -49,12 +49,12 @@
 	font-size:90%;
 }
 
-.write{
+.modify{
 	width:10%;
     height:40px;
 	background-color:#ef0056;
 	color:white;
-	border: 1px solid lightgray;
+	border:1px solid lightgray;
 	border-radius:5px;
 	box-shadow:none;
 }
